2017-02-23  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-641
	
	* src/m_linemixing.cc: Move methods out of if-def for relmat,
	Hope this fixes the error.

2017-02-23  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-640
	
	* 3rdparty/relmat/CMakeList.txt:  Added OpenMP.
	
	* 3rdparty/relmat/*:  Now with the linearization method 
	that Teresa has been working on.  Also, now 
	with the promise to be silent if not given a debug flag.
	The same debug flag then reports - by binary - if the 
	program ran into errors or not.  For unknown reasons,
	the new error checking makes RELMAT run one order of
	magnitude slower.
	
	* src/m_linemixing.cc: adapted for the new error handling.
	Also added two helper functions
	(SetBandIdentifiersAuto) and (SetRelaxationMatrixCalcType)
	to help user set the bands to every band and select to 
	use the linearization method or Hartmann-Tran method.
	
	* src/quantum{cc,h}:  Helper function 
	(SetFromStringForCO2Band) now available to easily set CO2 
	bands from standard notations for CO2.
	
	* src/workspace.cc: made relmat_type_per_band and 
	band_identifiers part of the workspace

2017-02-22 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-639

	* src/m_rt4.cc, methods.cc (RT4Calc, RT4CalcWithRT4Surface):
	For cleaner interfaces, separated RT4 interface into two separate WSM,
	one using surface_rtprop_agenda (RT4Calc), the other using RT4's own
	surface property handling (RT4CalcWithRT4Surface).

	* src/rt4.[cc,h] (check_rt4_input, get_quad_angles, run_rt4):
	Moved common RT4 pre-, post- and processing functionality of both RT4
	WSM into subroutines.
	(get_rt4surf_props):
	Subroutine to prepare surface properties for RT4-side surface
	handling.

	* controlfiles/artscomponents/polradtran/TestRT4.arts:
	Adapted to changes above.

	* CHANGES-2.3:
	Added info on RT4 and Disort. Added info on p30 format change.

2017-02-22  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-638
